# ChangeLog for media-libs/libcanberra
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libcanberra/ChangeLog,v 1.113 2014/12/19 13:40:08 pacho Exp $

  19 Dec 2014; Pacho Ramos <pacho@gentoo.org> libcanberra-0.30-r2.ebuild:
  amd64 stable, bug 529964

  18 Dec 2014; Pacho Ramos <pacho@gentoo.org> libcanberra-0.30-r2.ebuild:
  x86 stable, bug 529964

  12 Dec 2014; Jeroen Roovers <jer@gentoo.org> libcanberra-0.30-r2.ebuild:
  Stable for HPPA (bug #529964).

*libcanberra-0.30-r2 (14 Oct 2014)

  14 Oct 2014; Pacho Ramos <pacho@gentoo.org>
  +files/libcanberra-0.30-wayland.patch, +files/libcanberra-gtk-module.sh,
  +libcanberra-0.30-r2.ebuild, -files/gconf-2.m4,
  -files/libcanberra-0.28-underlinking.patch,
  -files/libcanberra-0.28-workaround-hang.patch:
  Desktops different than GNOME need a xinit.d file (#520550 by ssuominen), add
  a fix from upstream for wayland, drop old

  22 Aug 2014; Samuli Suominen <ssuominen@gentoo.org>
  libcanberra-0.30-r1.ebuild:
  Pull in virtual/libudev with := instead of virtual/udev.

  27 Apr 2014; Pacho Ramos <pacho@gentoo.org> -libcanberra-0.29.ebuild:
  drop old

  10 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libcanberra-0.30-r1.ebuild:
  Stable for hppa, wrt bug #458984

  09 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libcanberra-0.30-r1.ebuild:
  Stable for sh, wrt bug #458984

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libcanberra-0.30-r1.ebuild:
  Stable for sparc, wrt bug #458984

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libcanberra-0.30-r1.ebuild:
  Stable for alpha, wrt bug #458984

  29 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libcanberra-0.30-r1.ebuild:
  Stable for ia64, wrt bug #458984

  28 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libcanberra-0.30-r1.ebuild:
  Stable for arm, wrt bug #458984

  27 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libcanberra-0.30-r1.ebuild:
  Stable for ppc64, wrt bug #458984
