@@ -5,13 +5,23 @@ AUX libcanberra-0.30-wayland.patch 2382 SHA256 ab3a989e346f871b22c99bcb8b6203eb8
 AUX libcanberra-gtk-module.sh 275 SHA256 05ec5bf32497e85f3b55b1e5ae2d7c3beac939471e92471f0665c8687830efaf SHA512 6c945211ad9d461e5bdac209c83e0fc0c714eb194f6d57e4f18db1d904528fe845cd628572d0ab9eb4d53005c00073b376b6d718bcd0cddaeee83dc90042643d WHIRLPOOL 81bdb7bd2d8f6a45e580205343898145dddff4a6bb50f9851da32981820bd7cf4673a066df2f3fe207a1c62e3790d8947c4379ad20b5832272982539ea1c2172
 DIST libcanberra-0.30.tar.xz 318960 SHA256 c2b671e67e0c288a69fc33dc1b6f1b534d07882c2aceed37004bf48c601afa72 SHA512 f7543582122256826cd01d0f5673e1e58d979941a93906400182305463d6166855cb51f35c56d807a56dc20b7a64f7ce4391368d24990c1b70782a7d0b4429c2 WHIRLPOOL 684f0c4886f5bbc22d92500d0aa6371655106c8e788fe57d98b011e61fc0b09412edfddf782d42424009445e66bfa28ec43953ad263ea3eb0d9d9049ec479d87
 EBUILD libcanberra-0.30-r1.ebuild 1832 SHA256 fde1cd7cc2b83c533a26e0c02d3dc52a4bdbf040f896335df85f938cc7a035af SHA512 2c094d273d7f6af9600350f924a63126140edaf966b582df0ee8dc588fe28677fad13a33a958d529d4e33cb1f84f2ef996edf40b07fe6debe081281bfe615b45 WHIRLPOOL 956659bf478c5c8c428f96b75428b331c1256c99032f24f3846e5cfc10c1b5d71b2d6d43941481fa8a222f375ea850874d04d0728c505350387db072dc5a93da
-EBUILD libcanberra-0.30-r2.ebuild 2124 SHA256 16573c44898bbc433cd473cd341f403d343aef479835c92961f3ceb7d40dbfc3 SHA512 0682b0d6c9dddb46cd03dce262c5501cdc419b97cfd0391b4c5628ccb1a4ca04d5b314cda082a00ed4a420ab7bdda74e4a1f63be76c5f20903b2cf084db3a250 WHIRLPOOL 2ccb4f66f9166a0316db1196485ac1bdd1e5e0fe4e5ea29a210d26e8e9c97ef19dd60ab6e9443c373bd095e77712e2a1a3f74a35e4f2b7d664f5e935acb5db4f
-MISC ChangeLog 17441 SHA256 878a0321b1a18b576b504a399ff2022a5c70b8e96be15c95784ca0bb90cc3fd9 SHA512 a8d3cef630de220ea176b8ed6317e18a929f446c0ea267484416deab249f1a0771d9c698b242de82960e0197fb89e1a7ccf4622a7bf53eee3d797b8a0fe05301 WHIRLPOOL bace8e7e229fa7d42a36624f6299f96e6d314f49796b835a968c28bb8366ed07e5c73ea56c16f045c3331fa3f27cc473c4b3842aa7bb1ce711a80f147b8842a1
+EBUILD libcanberra-0.30-r2.ebuild 2121 SHA256 2cc1c9d0244617bdeb5af8ea382849bbc001a6968298482591012e361fa41d71 SHA512 08cce40e82f8a93679b10e28bcb9da9bc9010896c0abe15ea65dc79ea96da6e8dda54b378f99b2d31bbe2a65bc46d684e17ff65f41ee672e8af03a9f5149d795 WHIRLPOOL 16f17ab93278694edd2181d39eb09eb5a9dc84ba19cc88d05f9537908c7194d9bfa44ddd5f40c1c8e2bc25537ffce88b670f7e1866ed055d67eb54e2b59818ef
+MISC ChangeLog 17551 SHA256 ef790ce2fc4976e525684f01764848273e46bfa6c088b05e6ebc5581d41e84de SHA512 5a15aa9f9fb39e41131e8a63852cbca31ccbce3b248588bf7db1d4d6adb6b6efd583727ba7a8efa2384396e327e6f45a6247ed4ac9665a0b01e96a6d98227fe7 WHIRLPOOL faa9d4db5d1df8a915d9e89f2a71f069db0213b0bec47d1839d78c14f7f545b3212d9740eb82ae4608069802d068b7d9b608d69f552b1c2658321ee1d7d54930
 MISC metadata.xml 1542 SHA256 937a49bfb06b48512919df4237fabf66d40794144843790337f884961bdcf1c9 SHA512 47defa808a9e568f0608ab1c09ccbdc02be391fb8a855fd16c4a9bf8d7ea86c5eeab98612ef0624706f4190cc48688d69f5831d34be8ceafebd1889071021021 WHIRLPOOL 97ac02cb17da73790ac9992d28f7c59befb5baef72c35c5dd4118ac5415b8894bb2b6c1e6d6fac9e29752d6cc283acc5967a4f04f75a71f33157673a2b77147b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSUKrkACgkQCaWpQKGI+9TsnQCfe3tWyzNU4fo3R3PCdKLJ7w9S
-xcAAn3uF1rWa0Ashp5lIye3TMX87/YQT
-=FFEA
+iQIcBAEBCAAGBQJUn/ZzAAoJELp701BxlEWfUPUQAMK7AwbkNJTcVQDfCDTFQMGS
+UYlkcbkC6ici08vRvJu7/q88s5akll8KQb4r6C+4jrDnj1StTBk2+tpcKBfQljd9
+sQEvH6LM471hj8RCGtRAbb95QqnQuc/9yuJW+4osOpUPHuOVXUnaZ4+/aPx0q7wg
+dLcO7678Y2cIyA6cbob2WOEsUtl+FPe36Eafn/hYOJca9wfdSn/XrDfiVoC2jUu4
+xlDweH2LNiF8LyWLgiBIqG66YEKEBQNMUzezqfUGSxlsp6g6znWod1tbpkVSu4Pm
+59IHJMeOyhf4fyCx/wMeYtwSXkH4a/Bo32uK0jCBPCjjITTsKPTXiFStPMvBlxAW
+bDSU18R1jbmmq4GM93xzJI63Q33+7YxzYS+ej0ubADtAmQ1Gr0h6TW2YG25LW6eQ
+3jHkt57eCzbi3lR1PV5gmlo+Py6RDanTfhKY1V3R/Ew/rXlLQjyggY3GAdxqhApB
+yxL4i4JaY34K6KOTQWweSlco3KWdcfsMsdyNtfaikp1YlDgwcLj9tdM5SOqXD4Os
+dyFWPQI5kAl1fjlLH7A9A8m0NnFRVw3f9piBCjIWYw8j+d34Yejsj07ccCrPPMyA
+V7PV7nv/pFe80QL4g75we43G7F03kXD+bxAx1W5SY/rGxX9ijuEF9ieQl3Rh/zhk
+6ao6jeWxthY3ueZ2XCHv
+=x3Li
 -----END PGP SIGNATURE-----
