@@ -8,13 +8,23 @@ DIST libgphoto2-2.5.5.1.tar.bz2 6699687 SHA256 600e6bde24545eef4d2d8285af389a5ae
 EBUILD libgphoto2-2.5.3.1.ebuild 6459 SHA256 1bf31a1078e387f91446ee3a0d638d7e72799809fb76223ca1ba7f1ea5b2339d SHA512 357b620e7d1df2b7aea958aa2956e81ad8414c86babea5793ebf45cd5746a53322a6300dc40ea5063bb2e6a3972f28ae0b469e82fd5bad44ce44b0783b7fc768 WHIRLPOOL 80b34527146ce065f52206d433ee38528dc4dc763f19bfb78488e348ba6c40a20a8b0e4cf595e4c81380073f6b643a31df5578b58e51180cfff2fcea588bc622
 EBUILD libgphoto2-2.5.4-r2.ebuild 7416 SHA256 234323578d8e4c6f0a2dff42ebc35bb393fe5c2bc9fa6863d4ab2dac0554b45e SHA512 dc14f7199c3fba3c708afe05af434ee618ea9224d2c5bb9c95e0ab2880d3171ffb20603cec87a16ece43435162bbe912aa9f0ceafaffc3620141fb637edbd077 WHIRLPOOL d63730e7e69656f522e0d79f4f149d50757d60e7132e49e14d76b2598907bf1e46cb5eeaf7e6c70d8ff97d1b40a9f51ea01bde3d7be8e997aac5eefb282b5398
 EBUILD libgphoto2-2.5.4.ebuild 6701 SHA256 12d2a0cf6addc8b138e8403fd987fa637d9717300c7839a0126fe79cc25c3451 SHA512 575cb95deadce8acababe9a9b51d5d807887a7ad89a0d5d2fba96b1ef6dc435081ab67df306fac9b34599506bc57af28674da7a584b345ad3d24136d2e465ac9 WHIRLPOOL 19c850f2f2d100935554b5cf3bac51621a9fe3fca4c6d6f3e52a0ffa67224f79c89d6784e1becfb439d3a3ccb9e65504fcb41c979ae61cde7e4f002085655a0a
-EBUILD libgphoto2-2.5.5.1-r1.ebuild 7328 SHA256 929d7219151340856c10eaca08919dd2104a94d64fc88fe3f24c51d5a58195e2 SHA512 2bf7057fa2b0ed24ccf2d0469fbf81e7b8d4b859887d67e7a3608e4606a6eed9a3f45eb9868bb318ea31a7d9bfd2385a15535118eeda0c4d06fe6f9dbcff86e0 WHIRLPOOL eea288c197d98c51463d338dd5342ee6489df80d55143b5419798db83ad3414887b496c92f39ab7def04270a8729cb70021e2fcfb45fda2dd789f10086661287
-MISC ChangeLog 43477 SHA256 fd9f4c9265cb8400f4d2f848cffe2b747f49c7a2ec54aea0bbffc40d10be3a0b SHA512 8023f930676dc131b6cd4b19521a57525582bf36b3c3ccdd17349431d766c2b1d88c5574c9ee6e1e616b596b98cb01bae0dd7cb4f929821e0a2e0eb0996ce5a0 WHIRLPOOL c027f40dea17b990ac22e7336e0c0de754fa909f01a9ae3414b7a81df0c3c71bb72e1d3c025ac9ed5f0c8d42aeccf51c84fcda984b3fbfe65ac16fad641d78e0
+EBUILD libgphoto2-2.5.5.1-r1.ebuild 7325 SHA256 fafa35a714255e694d663337037ca099e4dcf8a0ac077ceeac0fe52977fed15b SHA512 3ef7802c815bd8907cb939d5d0dbdc8aa98f057343ff2838de0d806202d97eeb14a77934edcbd1a4c2bde51b05fc6b13aa0bba54ae7de4b4f2768c0b872aef65 WHIRLPOOL 886f1ba8ae2b7edbcd7e074e1e0b59b3c24285bd63980eca07f53f94bda2f7d885a320f56da3687419c9d2316c4f314c4cce29881d52da1b7082e73f154f4aff
+MISC ChangeLog 43589 SHA256 82bff0b8e3082c81cbe989e2539157b759651e38097a15850678e07ec520e877 SHA512 9b1155f45523ea202f49938a9d97bbe421155b1d2a887a5771c8b00367bea7583ce8b49207a4a63f73bcb06f67d5f8fc861c359778cc5822c9596f09e1abc571 WHIRLPOOL 82f5147ba1831a9544ee1474e5c660fdf41c33803cc5702d57cd4761d9cd26c1a8c12a651f2c5c8bf4aac230d942c7d3f6756f76d01696b16856b3036af06182
 MISC metadata.xml 253 SHA256 d588fba550907efea387719a7a12f54e6c0ec2ca03864f9f5cf828d26fdd0e4a SHA512 810bb24e1fadd707df227dc11b1a04f25e102364dc8a709e0a082a539081afef56beb2618e2e38ed5d0c7f34c8bda966035c6ad25598ced1ddd5202260cc8079 WHIRLPOOL 0773381f0be58cda0a2ecdca7cb89638cce7b1dc774e2c13500ff43d42f8c8c771e00cc91433ddc7e1213be6267f3ad02981dd20e11590371935d02a49247b2f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSUKscACgkQCaWpQKGI+9TOyQCeM5z4XviYM7qoaEXFN4UFNPGu
-MQ8AnApebT2Wsxa+FHY4BsbkYO2xgpeQ
-=xOu+
+iQIcBAEBCAAGBQJUn/Z4AAoJELp701BxlEWfYNMP/j35lxI95Fes6FVMmg5NDSvw
+g6Pcfy27xzUVF+ffnDr33lXuNFd1TxY8YGcPG+JB0JconjV5RuQ3xEAiWS3xBzbP
+pIHcQLOi2mgirALcygAblMbYqg6mHQHSmulVkmLCndilOR3098MoToWDlddW+PsD
+JbaFDZo68jdOmtOvalo2xQlLAiCSoTka9Mdv6by2mBECkY/bhMk+n37iGd+yQo+o
+PGmH68oYTEok77lH4I66Vr9ek/ChGq1Xix6S7sSRpbdC5RrzCZfWFsEiFmggjp/A
+M2xaLvnYZ4mdI5XTkZ4QntySMThCwmWyQaUPJrf2aXtX4pVFdqq5I7VoSBZUXTd6
+mlLWiFg3OU+oEjmW4r8brGau5D6CuGOuZ026/+sqE0jS6IPWYQdR5SopwjXRi7tv
+AeFvX5Jd92bt03BZSwMTMlRK36DIjEsieR8KJDAZ4s9CPYXbS6NnvfT3CFq3xspt
+2KGROELz+9VieDzM+OpSG9KRhu0i+dDSiCRPkw+AjSgLabxtWs5b1VplyM7uXlmc
+08siJRBzL2cfpM7DTKqN/8merzOzEAepK72ISXrAW3bgcCbclMUHYeBogTwRsDi9
+wgzISgsvRnR/znnhXcRO3XzK+D6UwEdthQ8QQyIo+5d6wzhnnyWb5CcsosgCuo//
+iK/tjX/m5CYLAQU4Un1Y
+=7pPH
 -----END PGP SIGNATURE-----
