@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libgphoto2
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.273 2014/12/19 13:40:21 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.274 2014/12/28 12:24:23 ago Exp $
+
+  28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libgphoto2-2.5.5.1-r1.ebuild:
+  Stable for ppc, wrt bug #529964
 
   19 Dec 2014; Pacho Ramos <pacho@gentoo.org> libgphoto2-2.5.5.1-r1.ebuild:
   amd64 stable, bug 529964
