@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libcanberra
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcanberra/ChangeLog,v 1.113 2014/12/19 13:40:08 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcanberra/ChangeLog,v 1.114 2014/12/28 12:24:18 ago Exp $
+
+  28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libcanberra-0.30-r2.ebuild:
+  Stable for ppc, wrt bug #529964
 
   19 Dec 2014; Pacho Ramos <pacho@gentoo.org> libcanberra-0.30-r2.ebuild:
   amd64 stable, bug 529964
